# snake-sdl3

./: CMakeLists.txt  README.md
assets/fonts/asimov-font/: info.txt
include/SDL3/: SDL_main.h  SDL_main_impl.h
lib/cmake/SDL3_image/: SDL3_imageConfig.cmake
lib/cmake/SDL3_ttf/: SDL3_ttfConfig.cmake
lib/pkgconfig/: sdl3-image.pc  sdl3-ttf.pc
src/: main.cpp
